[project]
name = "vites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "polyfactory>=2.19.0",
    "pydantic>=2.5.3",
    "sparkdantic>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
spark = [
    "pyspark>=3.5.5",
]
